# Chat_Server_Client

./: CMakeLists.txt  README.md
include/: public.h
include/server/: chatserver.h  chatservice.h
include/server/db/: db.h
include/server/model/: UserModel.h  friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: UserModel.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_servce.cpp
